--- a/gui/gnao.qrc
+++ b/gui/gnao.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="Images">
+    <file>images/guiMOCKUP2.png</file>
     <file>images/guiMOCKUP.png</file>
   </qresource>
 </RCC>
